# GameOfLife

./: .gitignore  CMakeLists.txt  GameOfLife.cbp  Makefile  README.md  main.c
src/: main.c
